tests/errors/interface_extension_missing_field.dang
# A child interface must cover every field its parent interface declares.

interface Named {
  name: String!
}

interface Greetable {
  greet: String!
}

# Missing: pub greet
interface Greeter implements Named & Greetable {
  name: String!
}
